--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,16 @@ jobs:
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
 
-      # Runs a set of commands using the runners shell
-      - name: Run all tests
-        uses: matlab-actions/run-tests@v2
+      # # Runs a set of commands using the runners shell
+      # - name: Run all tests
+      #   uses: matlab-actions/run-tests@v2
+      #   with:
+      #     source-folder: code
+
+      - name: Run MATLAB command
+        uses: matlab-actions/run-command@v2
         with:
-          source-folder: code
+          command: codegen dayofyear # assertSuccess(results);
 
       # You can use "run-build" to invoke the MATLAB build tool and run build tasks
       #- name: Run the default "test" task in the build file
